自創的師徐分類方法

--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D</title>
 </head>
+<style>
+    th, td {
+        border: 1px solid #000;
+        text-align: center;
+    }
+    </style>
+    <style>
+        table {
+            border-spacing: 0;
+            border-collapse: collapse;
+            margin-top: 20px;
+        }
+        </style>
 <body>
-    
+    <div>
+<hi>自創的詩學分類方法</hi>
+    </div>
+
+        <table>
+            <thead>
+                <tr>
+                    <th>形式(風格)</th>
+                    <th>內容(主題)</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>含蓄、五言絕句</td>
+                    <td>愛情</td>
+                </tr>
+            </tbody>
+        </table>
 </body>
+
 </html>
