Revert "我的第一個版本"
This reverts commit ca2f2eb15fd36c0d3eb1374b1f3aeeca9ff36cf0.

--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>D</title>
 </head>
+<link rel="stylesheet" href="css/美編.css">
 <style>
     th, td {
         border: 1px solid #000;
